force-app/main/default/objects/Price__c/Price__c.object-meta.xml
<CustomObject>
    <label>Price</label>
    <nameField>
        <displayFormat>{YY}{MM}{DD}-{00}</displayFormat>
        <label>Price Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>