force-app/main/default/objects/Price__c/fields/Barge_Fee__c.field-meta.xml
<CustomField>
    <fullName>Barge_Fee__c</fullName>
    <label>Barge Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>