force-app/main/default/objects/Price__c/fields/Broker_Fee__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fee__c</fullName>
    <label>Broker Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>