force-app/main/default/objects/Price__c/fields/Conco_Standard_Fee_tonne__c.field-meta.xml
<CustomField>
    <fullName>Conco_Standard_Fee_tonne__c</fullName>
    <label>Conco Standard Fee /tonne</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>