force-app/main/default/objects/Price__c/fields/Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price__c</fullName>
    <formula>( MOP__c + Additional_Aviation_Margin__c +  Barge_Fee__c + Broker_Fee__c + Conco_Standard_Fee_tonne__c + Delco_Additional_Margin_tonne__c + Delco_Margin__c + Discount_tonne__c + Intra_Plane_Cost__c + Other_Costs__c + Transport_Costs_tonne__c ) * Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>