force-app/main/default/objects/Price__c/fields/Delco_Additional_Margin_tonne__c.field-meta.xml
<CustomField>
    <fullName>Delco_Additional_Margin_tonne__c</fullName>
    <label>Delco Additional Margin /tonne</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>