force-app/main/default/objects/Price__c/fields/Delco_Margin__c.field-meta.xml
<CustomField>
    <fullName>Delco_Margin__c</fullName>
    <label>Delco Margin /tonne</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>