force-app/main/default/objects/Price__c/fields/MOP__c.field-meta.xml
<CustomField>
    <fullName>MOP__c</fullName>
    <label>MOP</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>