force-app/main/default/objects/Price__c/fields/Other_Costs__c.field-meta.xml
<CustomField>
    <fullName>Other_Costs__c</fullName>
    <label>Other Costs</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>