force-app/main/default/objects/Price__c/fields/Transport_Costs_tonne__c.field-meta.xml
<CustomField>
    <fullName>Transport_Costs_tonne__c</fullName>
    <label>Transport Costs /tonne</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>